# kairo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  add_dependency.sh  build_debug.sh  build_release.sh  main.cpp
.cache/clangd/index/: Clock.cpp.05923030EFF7057F.idx  Clock.hpp.505A8C19B202A49B.idx  Counter_guard.hpp.89148DE9CB1F7EE3.idx  ThreadPool.hpp.6806A5C6BF27A0E2.idx  ThreadSafeQueue.hpp.16159C970A2F72DC.idx  main.cpp.4511768D42CBEE83.idx  test_thread_pool.cpp.39244B18EA35A02F.idx  test_thread_safe_queue.cpp.C47570C2B33235DD.idx
cmake/toolchains/: gcc14-vcpkg.cmake
include/: Clock.hpp
include/kairo/ds/: BiMap.hpp  BufferedConstructor.hpp  CounterGuard.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp
include/kairo/fn/: General.hpp
include/kairo/ip/: WebsocketClient.hpp  WebsocketServer.hpp
scripts/: run_tests.sh
src/: Clock.cpp
src/kairo/ip/: WebsocketClient.cpp  WebsocketServer.cpp
tests/: test_thread_pool.cpp  test_thread_safe_queue.cpp
